--- a/css/style.css
+++ b/css/style.css
@@ -99,12 +99,14 @@ button {
   width: 30px;
   height: 30px;
   border-radius: 30px;
-  background-color: #535353;
+  background-color: #ececec;
   position: relative;
   cursor: pointer;
   border: 2px solid transparent;
 }
-
+.btn svg path {
+  stroke: #000000;
+}
 .slide__list {
   display: flex;
   align-items: center;
@@ -122,25 +124,14 @@ button {
   transform: rotate(180deg);
 }
 
-.btn__img {
-  width: 100%;
-  height: 100%;
-  background-image: url(../img/icon/Rectangle\ 67.svg);
-  background-repeat: no-repeat;
-  background-position: 30% center;
-  transition: background-color 1s ease;
-}
 .swiper-button-disabled {
-  background: #b0b0b0;
-  filter: contrast(0.8);
+  background: #ececec;
   pointer-events: none;
 }
-.partners .swiper-button-disabled {
-  background: #ececec;
+.swiper-button-disabled svg path {
+  stroke: #bbbbbb;
 }
-.partners .swiper-button-disabled .btn__img {
-  filter: contrast(0.5);
-}
+
 .simplebar-content {
   padding: 0px !important;
 }
@@ -561,6 +552,7 @@ input::-webkit-search-results-decoration {
 .project__descr {
   line-height: 32px;
   font-weight: normal;
+  overflow-wrap: break-word;
   font-size: 16px;
 }
 /* _______Трейтий блок__________ */
@@ -631,6 +623,7 @@ input::-webkit-search-results-decoration {
   margin-bottom: 0px;
   width: 90%;
   font-weight: 600;
+  overflow-wrap: break-word;
 }
 .gallery__descr-link {
   color: #c283f3;
@@ -820,6 +813,7 @@ input::-webkit-search-results-decoration {
 .history__descr {
   line-height: 32px;
   font-size: 16px;
+  overflow-wrap: break-word;
 }
 
 .descr-1 {
@@ -841,6 +835,7 @@ input::-webkit-search-results-decoration {
 
 .history__left img {
   width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
@@ -867,20 +862,20 @@ input::-webkit-search-results-decoration {
 
 .history__right {
   flex-grow: 1;
+  position: relative;
 }
 
 .history__period {
-  position: relative;
   font-size: 24px;
   font-weight: 600;
-  cursor: pointer;
   transition: border 0.3s ease-in-out;
 }
 
 .history__title-button {
   display: flex;
-  height: 100%;
   width: 100%;
+  cursor: pointer;
+  position: relative;
   border-top: 1px solid #cacaca;
   padding: 43px 0 44px;
   font-size: 24px;
@@ -888,17 +883,13 @@ input::-webkit-search-results-decoration {
   transition: color 0.3s ease-in-out;
 }
 
-.title-active {
+.ui-state-active {
   border-color: #7943a4;
   border-bottom: 1px solid #9d5cd0;
+  margin-bottom: 25px;
+  color: #9d5cd0;
 }
-.title-active .history__button {
-  background-color: #d1a9f0;
-  border: 2px solid #9d5cd0;
-}
-.title-active span {
-  color: #7943a4;
-}
+
 .history__button {
   background-color: #ececec;
   border: none;
@@ -911,8 +902,10 @@ input::-webkit-search-results-decoration {
   top: 31px;
   transition: 0.9s ease;
 }
-.history__button-active {
+.ui-state-active .history__button-active {
   transform: rotate(180deg);
+  background-color: #d1a9f0;
+  border: 2px solid #9d5cd0;
 }
 .history__button::before,
 .history__button::after {
@@ -941,34 +934,23 @@ input::-webkit-search-results-decoration {
   flex-direction: column;
   height: 314px;
   width: 100%;
-  padding-right: 71px;
+  padding-right: 70px;
 }
 
-.slide {
-  display: none;
-}
-
-.active-1 {
-  display: flex;
-  padding-top: 25px;
-}
-.slide__active {
-  display: flex;
-  padding: 25px 0;
-}
 .history__period-active {
   padding-bottom: 30px;
 }
 .history__item {
   font-size: 16px;
-  line-height: 32px;
+  line-height: 31px;
   margin-right: auto;
   cursor: pointer;
   font-weight: normal;
+  border-bottom: 1px solid transparent;
 }
 
 .history__link-active {
-  color: blue;
+  color: #7943a4;
 }
 .history__empty-img-block {
   width: 275px;
@@ -978,9 +960,15 @@ input::-webkit-search-results-decoration {
   padding: 12px;
   margin-right: 24px;
 }
-.history__empty-img {
+.history__empty-img-block::before {
+  content: "";
   width: 100%;
+  height: 100%;
   background-color: #b7b7b7;
+}
+.history__empty-content {
+  display: flex;
+  margin-bottom: 25px;
 }
 .history__empty-text {
   display: flex;
@@ -1011,7 +999,7 @@ input::-webkit-search-results-decoration {
   height: 470px;
   width: 750px;
   display: flex;
-  margin-bottom: 35px;
+  margin-bottom: 34px;
 }
 
 .history__disable-content,
@@ -1045,6 +1033,7 @@ input::-webkit-search-results-decoration {
   margin-bottom: 50px;
   border: 1px solid #cacaca;
   position: relative;
+  min-width: 0;
 }
 
 .events__info {
@@ -1052,7 +1041,7 @@ input::-webkit-search-results-decoration {
   flex-direction: column;
   justify-content: space-between;
   background-color: white;
-  padding: 0 48px;
+  padding: 0 48px 46px;
   flex-grow: 1;
 }
 
@@ -1063,8 +1052,8 @@ input::-webkit-search-results-decoration {
 }
 
 .events__img {
-  height: 300px;
-  margin-bottom: 14px;
+  min-height: 300px;
+  margin-bottom: 12px;
 }
 
 .events__img img {
@@ -1089,13 +1078,18 @@ input::-webkit-search-results-decoration {
 
 .events__all {
   flex-wrap: wrap;
-  
 }
 
 .events__descr {
   font-size: 16px;
   line-height: 32px;
-  padding: 3px 0px;
+  padding: 3px 2px;
+  min-width: 0;
+  overflow-wrap: break-word;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .events__all-info {
@@ -1106,15 +1100,14 @@ input::-webkit-search-results-decoration {
 
 .events__text-top {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-bottom: 45px;
+  position: relative;
 }
 
 .events__link-block {
   border: none;
   color: #9d5cd0;
+  position: absolute;
+  bottom: 0;
 }
 .events__link {
   font-size: 16px;
@@ -1136,7 +1129,7 @@ input::-webkit-search-results-decoration {
   display: none;
 }
 
-.events-slide{
+.events-slide {
   width: 500px !important;
   display: flex;
 }
@@ -1155,7 +1148,7 @@ input::-webkit-search-results-decoration {
 }
 .editions__title {
   color: #ffffff;
-  margin-bottom: 26px;
+  margin-bottom: 27px;
 }
 
 .editions__content {
@@ -1218,6 +1211,7 @@ input[type="checkbox"] + .editions__category::before {
   top: 5px;
   width: 12px;
   height: 12px;
+  transition: border 0.5s ease;
   border: 1px solid#FFFFFF;
 }
 
@@ -1294,13 +1288,13 @@ input[type="checkbox"] + .editions__category::after {
   display: flex;
   align-items: center;
   border: 1px solid rgba(255, 255, 255, 0.5);
-  border-radius: 4px;
+  border-radius: 6px;
   color: #ffffff;
-  width: 77%;
+  width: 78%;
 }
 
 .cost-1 {
-  padding: 0 10px;
+  padding: 4px 10px;
 }
 
 .cost-2 {
@@ -1318,11 +1312,10 @@ input[type="checkbox"] + .editions__category::after {
 
 .editions__cost-price {
   background-color: rgba(157, 92, 208, 0.5);
-  width: 73px;
+  width: 74px;
   border: none;
-  padding: 11px 0 11px 10px;
-  color: white;
-  opacity: 0.5;
+  padding: 11px 0px 11px 10px;
+  color: #ffffff;
   text-align: left;
 }
 .editions__cost-price::placeholder {
@@ -1347,9 +1340,10 @@ input[type="checkbox"] + .editions__category::after {
   line-height: 32px;
   font-size: 16px;
   position: relative;
+  overflow-wrap: break-word;
 }
 .detailed__title {
-  margin-bottom: 22px;
+  margin-bottom: 21px;
 }
 .detailed__unity-block {
   padding: 85px 0 23px;
@@ -1371,45 +1365,40 @@ input[type="checkbox"] + .editions__category::after {
 
 .popup {
   position: absolute;
-  bottom: 28px;
   color: #ffffff;
   font-weight: 600;
   text-align: center;
   font-size: 12px;
   line-height: 16px;
   padding: 9px 7px;
-  width: 25%;
-  display: flex;
+  bottom: 26px;
+  left: -131px;
+  right: -122px;
   background-color: #9d5cd0;
   opacity: 0;
   transition: opacity 0.3s ease-out;
 }
-.popup-1 {
-  bottom: 165px;
-  left: 15%;
+.popup::after {
+  content: "";
+  border: 5px solid #9d5cd0;
+  position: absolute;
+  bottom: -3px;
+  right: 47%;
+}
+.popup::after {
+  transform: rotate(44deg);
+}
+.detailed__tooltip {
+  position: relative;
 }
 .popup-2 {
-  padding: 8px 13px 10px;
-  right: -90px;
-  bottom: 130px;
+  right: -126px;
 }
-.popup-3 {
-  width: 22%;
-  padding: 9px 13px;
-  left: 341px;
-  bottom: 99px;
-}
-
 .detailed__icon:hover + .popup,
 .detailed__icon:focus + .popup {
   opacity: 1;
 }
-.detailed__icon:hover svg path:nth-child(2) {
-  fill: white;
-}
-.detailed__icon:hover svg > * {
-  stroke: white;
-}
+
 .detailed__descr a {
   font-size: 16px;
   font-weight: 600;
@@ -1425,7 +1414,7 @@ input[type="checkbox"] + .editions__category::after {
 .partners__title {
   font-size: 24px;
   font-weight: 600;
-  margin-bottom: 28px;
+  margin-bottom: 25px;
 }
 
 .partners__container {
@@ -1470,9 +1459,7 @@ input[type="checkbox"] + .editions__category::after {
   background-position: 42% center;
   filter: invert(1);
 }
-.arrow-button {
-  fill: blue;
-}
+
 .btn__partners-right {
   left: 38px;
 }
@@ -1510,7 +1497,7 @@ input[type="checkbox"] + .editions__category::after {
 .contacts__office {
   font-size: 24px;
   font-weight: 600;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
 }
 
 .form {
@@ -1575,12 +1562,14 @@ input[type="checkbox"] + .editions__category::after {
   height: 40px;
   margin-bottom: 20px;
 }
-.contacts__elem  {
+.contacts__elem {
   display: flex;
+}
+.contacts__elem:first-child {
+  margin-right: 20px;
 }
 .contacts__img-1 {
   background: url(../img/social/Whatsapp-Icon.svg);
-  margin-right: 20px;
 }
 
 .contacts__img-2 {
@@ -1628,7 +1617,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 48px 0;
+  padding: 47px 0;
 }
 
 .footer__social-block {
@@ -1647,7 +1636,6 @@ footer {
   margin-right: 20px;
 }
 
-
 /*______________Ховер эффекты________________*/
 
 a:focus {
@@ -1662,10 +1650,6 @@ a:focus {
   color: white;
 }
 
-.header__akk:hover {
-  color: #c283f3;
-  fill: #c283f3;
-}
 .header__select:hover {
   border-color: #9d5cd0;
 }
@@ -1676,8 +1660,10 @@ a:focus {
 }
 
 .header__link:hover,
-.gallery__descr-link:hover {
+.gallery__descr-link:hover,
+.header__akk:hover svg path {
   color: #c283f3;
+  fill: #c283f3;
 }
 
 .link-bottom:hover > .header__button-arrow > * {
@@ -1712,8 +1698,8 @@ a:focus {
 }
 
 .history__item:hover {
-  color: #d1a9f0;
-  border-bottom: 1px solid #d1a9f0;
+  color: #9d5cd0;
+  border-color: #9d5cd0;
 }
 .history__button:focus {
   outline: none;
@@ -1747,16 +1733,11 @@ a:focus {
 .form__button:hover,
 .editions__button:hover,
 .events__button:hover {
-  background: #9d5cd0;
+  background: #d1a9f0;
   color: #ffffff;
 }
 .partners__btn:hover {
   background-color: #dbb8f7;
-}
-.btn__left:focus,
-.btn__right:focus {
-  outline: none;
-  box-shadow: 0 0 0 2px black;
 }
 
 .btn:hover::before,
@@ -1792,6 +1773,7 @@ a:focus {
 .detailed__icon svg:hover,
 .detailed__icon svg:focus {
   fill: #9d5cd0;
+  stroke: white;
 }
 
 .detailed__descr a:hover {
@@ -1801,7 +1783,9 @@ a:focus {
 .editions__category:hover {
   color: #c283f3;
 }
-
+input[type="checkbox"] + .editions__category:hover::before {
+  border: 1px solid #c283f3;
+}
 .contacts__img:hover,
 .contacts__img:focus {
   opacity: 0.5;
@@ -1821,8 +1805,10 @@ a:focus {
 /*______Все Клики_______*/
 
 .header__link:active,
-.gallery__descr-link:active {
+.gallery__descr-link:active,
+.header__akk:active svg path {
   color: #7943a4;
+  fill: #7943a4;
   background-color: transparent;
 }
 .link-bottom:active > .header__button-arrow > * {
@@ -1836,12 +1822,7 @@ a:focus {
 }
 
 .btn:active {
-  border-color: #d1a9f0;
-}
-.btn__left:active,
-.btn__right:active {
-  outline: none;
-  border-color: black;
+  border-color: #9d5cd0;
 }
 .history__item:active {
   color: #7943a4;
@@ -1916,7 +1897,12 @@ input[type="checkbox"]:checked + .editions__category::after {
     margin: 0px auto 0 16px;
   }
   .events-slide {
-    width: 445px !important;
+    width: 416px !important;
+  }
+  .history__img-block {
+    background-color: #ececec;
+    height: 410px;
+    width: 649px;
   }
   .contacts__info {
     margin: 0 auto;
@@ -1934,7 +1920,7 @@ input[type="checkbox"]:checked + .editions__category::after {
     margin-right: 80px;
   }
   .events-slide {
-    width: 383px !important;
+    width: 350px !important;
   }
   .start__info {
     width: 50%;
@@ -1942,10 +1928,24 @@ input[type="checkbox"]:checked + .editions__category::after {
   .project__info {
     width: 87%;
   }
+  .history__content {
+    height: 400px;
+    padding: 0;
+  }
+  .history__img-block {
+    height: 365px;
+    width: 578px;
+  }
 }
 @media (max-width: 1200px) {
   .fix-container {
-    max-width: 950px;
+    max-width: 1024px;
+  }
+  .events-slide:not(:nth-child(3n)) {
+    margin: 0;
+  }
+  .events__all {
+    justify-content: space-between;
   }
   .header__akk,
   .header__link {
@@ -1974,11 +1974,14 @@ input[type="checkbox"]:checked + .editions__category::after {
     height: 400px;
   }
   .events-slide {
-    width: 470px !important;
+    width: 490px !important;
   }
   .editions__filter,
   .editions__all-category {
     margin-right: 50px;
+  }
+  .btn__partners-right {
+    left: 0px;
   }
   .editions__cost-price {
     width: 55px;
@@ -2120,11 +2123,9 @@ input[type="checkbox"]:checked + .editions__category::after {
   .header__button {
     margin-right: 0px;
   }
-  .history__elem {
-    align-items: flex-end;
-  }
+
   .history__header {
-    margin-bottom: 16px;
+    margin-bottom: 6px;
   }
   .header__button svg {
     width: 30px;
@@ -2151,7 +2152,7 @@ input[type="checkbox"]:checked + .editions__category::after {
   .start__title {
     font-size: 72px;
     width: 63%;
-    margin-bottom: 7px;
+    margin-bottom: 11px;
   }
   .start__descr {
     width: 80%;
@@ -2167,7 +2168,7 @@ input[type="checkbox"]:checked + .editions__category::after {
   }
   .project__descr {
     font-size: 16px;
-    padding: 5px 0 70px;
+    padding: 5px 0 69px;
   }
   .project__title {
     margin-bottom: 17px;
@@ -2182,18 +2183,25 @@ input[type="checkbox"]:checked + .editions__category::after {
   }
   .gallery__unity-block {
     padding-bottom: 70px;
-    height: 838px;
+    height: 839px;
   }
   .gallery__left {
     width: 435px;
     z-index: 1;
-    margin-right: 50px;
+    margin-right: 48px;
   }
   .btn__right {
     left: -3px;
   }
-  .slide__list {
-    margin: 20px 0px 27px;
+  .gallery .slide__list {
+    padding: 20px 3px 28px;
+    margin: 0;
+  }
+  .list__counter {
+    margin: 0 22px 0 18px;
+  }
+  .swiper__img-block {
+    height: 284px;
   }
   .gallery .swiper-slide:nth-child(4n + 3),
   .gallery .swiper-slide:nth-child(4n + 4) {
@@ -2214,7 +2222,18 @@ input[type="checkbox"]:checked + .editions__category::after {
   .descr-1 {
     width: 100%;
     font-size: 16px;
-    margin: 6px 0 39px;
+    padding: 0;
+    margin-bottom: 39px;
+  }
+  .history__img-block {
+    height: 274px;
+    width: 437px;
+    margin-bottom: 33px;
+  }
+  .history__age {
+    font-size: 12px;
+    color: #999999;
+    margin-bottom: 9 px;
   }
   .history__left {
     margin-right: 50px;
@@ -2222,10 +2241,13 @@ input[type="checkbox"]:checked + .editions__category::after {
   }
 
   .history__item {
-    margin-right: 46px;
+    margin-right: 55px;
   }
   .history__unity-block {
-    padding: 79px 0 59px;
+    padding: 89px 0 85px;
+  }
+  .history__title {
+    margin-bottom: auto;
   }
   .history__name {
     margin-bottom: 12px;
@@ -2241,7 +2263,10 @@ input[type="checkbox"]:checked + .editions__category::after {
   }
 
   .history__title-button {
-    padding: 41px 0 44px;
+    padding: 41px 0 45px;
+  }
+  .ui-state-active {
+    margin-bottom: 27px;
   }
   .header__logo {
     display: flex;
@@ -2250,13 +2275,9 @@ input[type="checkbox"]:checked + .editions__category::after {
   .history__content {
     height: 413px;
     width: 100%;
-    margin-top: 24px;
   }
   .history__period:last-child {
     padding-bottom: 30px;
-  }
-  .history__left img {
-    margin-bottom: 30px;
   }
   /*  */
 
@@ -2264,7 +2285,7 @@ input[type="checkbox"]:checked + .editions__category::after {
     padding: 0 24px 0 34px;
   }
   .events__adress {
-    margin: 14px 16px 1px;
+    margin: 12px 17px 3px;
   }
   .events-slide {
     width: 290px !important;
@@ -2276,6 +2297,7 @@ input[type="checkbox"]:checked + .editions__category::after {
   }
   .events__descr {
     font-size: 16px;
+    -webkit-line-clamp: 6;
     padding: 0px;
   }
   .events__link {
@@ -2292,20 +2314,22 @@ input[type="checkbox"]:checked + .editions__category::after {
     font-size: 18px;
   }
   .events__block {
-    height: 682px;
+    height: 683px;
+  }
+  .events__container {
+
+    margin-bottom: 34px;
   }
   .events__img {
-    height: 29%;
+    height: 28%;
+    min-height: 0;
+  }
+  .events__info h3 {
+    margin-bottom: 3px;
   }
   .events__link-block {
     margin: 0 0 43px;
     padding: 6px 0px 12px;
-  }
-  .more {
-    display: none;
-  }
-  .dots {
-    display: block;
   }
   /*  */
   .editions {
