--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,139 @@ button {
 .header__akk * {
   transition: fill 0.5s ease;
 }
+.header__log-in {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 20;
+
+  display: flex;
+}
+.akk-log-in__background {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.akk-log-in__title {
+  font-size: 40px;
+}
+.akk-log-in__content,
+.akk-sing-in__content,
+.akk-success {
+  background-color: white;
+  margin: auto;
+  padding: 50px;
+  display: none;
+  flex-direction: column;
+  border-radius: 20px;
+  z-index: 7;
+}
+.akk-success {
+  font-size: 40px;
+  width: 500px;
+  text-align: center;
+}
+.header__log-in {
+  display: none;
+}
+.akk-log-in__form {
+  display: flex;
+  flex-direction: column;
+}
+.akk-log-in__title {
+  margin-bottom: 15px;
+}
+.akk-log-in__email-block,
+.akk-log-in__password-block,
+.akk-log-in__checkbox-block {
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+}
+.akk-log-in__checkbox-block {
+  flex-direction: row;
+  align-items: center;
+  position: relative;
+}
+.akk-log-in__checkbox {
+  position: absolute;
+  opacity: 0;
+}
+.akk-log-in__checkbox-block .akk-log-in__text::before {
+  content: "";
+  border: 1px solid #9d5cd0;
+  padding: 0 12px;
+  margin-right: 10px;
+}
+.akk-log-in__checkbox:checked + .akk-log-in__text::after {
+  content: "";
+  height: 15px;
+  width: 15px;
+  position: absolute;
+  left: 5px;
+  top: 4px;
+  background-color: #9d5cd0;
+}
+.akk-log-in__email,
+.akk-log-in__password {
+  padding: 15px 10px;
+  border: 1px solid #333333;
+  border-radius: 100px;
+  margin-bottom: 10px;
+}
+.akk-log-in__password-block {
+  margin-bottom: 30px;
+}
+.akk-log-in__save-password {
+  font-size: 18px;
+}
+.akk-log-in__text {
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+.akk-log-in__button {
+  font-size: 20px;
+  padding: 15px;
+  border-radius: 30px;
+  background-color: transparent;
+  font-weight: 600;
+  border: 1px solid #9d5cd0;
+  margin-bottom: 40px;
+}
+.akk-log-in__another {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px 15px;
+  border-top: 1px solid black;
+}
+.akk-log-in__social {
+  display: flex;
+}
+.akk-log-in__sing-up {
+  margin-bottom: 15px;
+  font-size: 24px;
+}
+.akk-log-in__elem-text {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.akk-log-in__elem {
+  border-radius: 60px;
+  background-color: black;
+  padding: 15px;
+}
+.akk-log-in__elem:not(:last-child) {
+  margin-right: 15px;
+}
+.sing-in__active {
+  display: flex;
+}
 
 .svg path {
   fill: inherit;
@@ -971,9 +1104,7 @@ input::-webkit-search-results-decoration {
   margin-bottom: 25px;
 }
 .history__empty-text {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  margin: auto 0;
   flex-basis: 34%;
 }
 .history__empty-title {
@@ -1122,7 +1253,7 @@ input::-webkit-search-results-decoration {
   padding: 18px 36px;
   color: #9d5cd0;
   font-weight: 600;
-  margin: 0 auto 80px;
+  margin: 0 auto 81px;
 }
 
 .more {
@@ -1154,7 +1285,7 @@ input::-webkit-search-results-decoration {
 .editions__content {
   display: flex;
   justify-content: space-between;
-  padding: 86px 0 42px;
+  padding: 86px 0 41px;
 }
 
 .editions__filter,
@@ -1191,7 +1322,8 @@ input::-webkit-search-results-decoration {
 
 .editions__category {
   position: relative;
-  padding-left: 24px;
+  display: flex;
+  align-items: center;
   font-size: 16px;
   font-weight: normal;
   cursor: pointer;
@@ -1200,34 +1332,44 @@ input::-webkit-search-results-decoration {
   line-height: 1.9;
 }
 
-input[type="checkbox"] {
-  display: none;
-}
-
-input[type="checkbox"] + .editions__category::before {
+.editions__category-text::before {
   content: "";
   position: absolute;
   left: 0;
-  top: 5px;
+  top: 8px;
   width: 12px;
   height: 12px;
   transition: border 0.5s ease;
   border: 1px solid#FFFFFF;
 }
 
-input[type="checkbox"] + .editions__category::after {
+.editions__category-text::after {
   content: "";
   position: absolute;
   width: 4px;
   height: 4px;
-  top: 10px;
+  top: 13px;
   left: 5px;
   opacity: 0;
   border-radius: 30px;
   transition: opacity 0.3s ease-in-out;
   background-color: #c283f3;
 }
-
+.editions__category input[type="checkbox"] {
+  opacity: 0;
+  position: absolute;
+}
+.editions__category-text {
+  padding-left: 24px;
+}
+.editions__category
+  input[type="checkbox"]:checked
+  + .editions__category-text::after {
+  opacity: 1;
+}
+.editions__category input[type="checkbox"]:focus + .editions__category-text {
+  outline: 1px solid #9d5cd0;
+}
 .editions__books,
 .editions__book {
   display: flex;
@@ -1783,7 +1925,7 @@ a:focus {
 .editions__category:hover {
   color: #c283f3;
 }
-input[type="checkbox"] + .editions__category:hover::before {
+input[type="checkbox"] + .editions__category-text:hover::before {
   border: 1px solid #c283f3;
 }
 .contacts__img:hover,
@@ -1843,7 +1985,7 @@ input[type="checkbox"] + .editions__category:hover::before {
   background-color: #7943a4;
 }
 
-input[type="checkbox"]:checked + .editions__category::before {
+input[type="checkbox"]:checked + .editions__category-text::before {
   border-color: #c283f3;
 }
 
@@ -1851,11 +1993,11 @@ input[type="checkbox"]:checked + .editions__category::before {
   color: #7943a4;
 }
 
-input[type="checkbox"]:checked + .editions__category {
+input[type="checkbox"]:checked + .editions__category-text {
   color: #c283f3;
 }
 
-input[type="checkbox"]:checked + .editions__category::after {
+input[type="checkbox"]:checked + .editions__category-text::after {
   opacity: 1;
 }
 
@@ -2317,7 +2459,6 @@ input[type="checkbox"]:checked + .editions__category::after {
     height: 683px;
   }
   .events__container {
-
     margin-bottom: 34px;
   }
   .events__img {
@@ -3420,11 +3561,11 @@ input[type="checkbox"]:checked + .editions__category::after {
   .editions__all-category--new {
     margin-bottom: 25px;
   }
-  input[type="checkbox"] + .editions__category::after {
+  input[type="checkbox"] + .editions__category-text::after {
     top: 13px;
     left: 4px;
   }
-  input[type="checkbox"] + .editions__category::before {
+  input[type="checkbox"] + .editions__category-text::before {
     left: 0px;
     top: 9px;
     width: 10px;
